avoid page break on footer

--- a/systems/china-unique/menu/sales/delivery-order/printout/style.css
+++ b/systems/china-unique/menu/sales/delivery-order/printout/style.css
@@ -1,3 +1,7 @@
+.do-footer {
+  page-break-inside: avoid;
+}
+
 .do-header td,
 .do-footer td {
   vertical-align: top;
