--- a/systems/china-unique/menu/stock-in/printout/style.css
+++ b/systems/china-unique/menu/stock-in/printout/style.css
@@ -1,3 +1,7 @@
+.stock-in-footer {
+  page-break-inside: avoid;
+}
+
 .stock-in-header,
 .stock-in-footer {
   font-size: 13px;
